# snowblower

./: .aider.conf.yml  .dockerignore  .envrc  .gitignore  CONVENTIONS.MD  CONVENTIONS.md  README.md  default.nix  docker-compose.yml  flake-module.nix  flake.nix  generate_docs.py  justfile  mkSnow.nix  mkSnowBlower.nix  module-options.nix  options-document.nix  options.md  package-lock.json  package.json  pyproject.toml  ruff.toml  shell.nix  snow  snowblower.nix  snowblower.yml  treefmt.toml
.devcontainer/: Dockerfile  configuration.nix  devcontainer.json  docker-compose.yml  snow-blower-config.nix
.github/workflows/: ci.yml  devcontainer-ci.yml  rebuild-release.yml  update-flake.yml
checks/: default.nix
dev/: .gitignore  .mdformat.toml  docker-compose.yml  flake.nix  snow  statix.toml  treefmt.toml
dev/docker/: Dockerfile
docker/: Dockerfile  Dockerfile.builder  Dockerfile.devshell  Dockerfile.tools  builder-entrypoint.sh  nix.conf
docs/: getting-started.md  index.md  integrations.md  just.md  languages.md  processes.md  scripts.md  services.md
docs/.vitepress/: config.mjs
docs/dotenv/: dotenv-options.md  dotenv.md  index.md
docs/integrations/: agenix-options.md  agenix.md  aider-options.md  aider.md  convco-options.md  convco.md  git-cliff-options.md  git-cliff.md  git-hooks-options.md  git-hooks.md  index.md  treefmt-options.md  treefmt.md
docs/just/: index.md  just-options.md  just.md
docs/languages/: index.md  java-options.md  java.md  javascript-options.md  javascript.md  php-options.md  php.md  python-options.md  python.md  ruby-options.md  ruby.md
docs/process-compose/: process-compose-options.md  process-compose.md
docs/processes/: index.md  processes-options.md  processes.md
docs/scripts/: index.md  scripts-options.md  scripts.md
docs/services/: adminer-options.md  adminer.md  aider-options.md  aider.md  blackfire-options.md  blackfire.md  elasticsearch-options.md  elasticsearch.md  index.md  memcached-options.md  memcached.md  mysql-options.md  mysql.md  redis-options.md  redis.md  supervisord-options.md  supervisord.md
docs/shell/: index.md  shell-options.md  shell.md
lib/: ansi.nix  code-quality-builder.nix  command.nix  dag.nix  default.nix  docker.nix  fileType.nix  formats.nix  functions.nix  hooks.nix  modules.nix  shell.nix  strings.nix  tool.nix  utils.nix  writeDefaultShellScript.nix
lib-bash/: boot.sh  checks.sh  color.sh  commands.sh  docker-commands.sh  file-creation.sh  help-extra.sh  help.sh  output.sh  snow-commands.sh  snow-down.sh  snow-switch.sh  snow.sh  snowblower-commands.sh  utils.sh  welcome.sh
lib-bash/snow/: bash.sh  boot.sh  build.sh  command-execute.sh  dev.sh  down.sh  main.sh  ps.sh  run.sh  switch.sh  up.sh  update.sh  utils.sh
lib-bash/utils/: checks.sh  color.sh  file.sh  head.sh  input.sh  output.sh
lib-docker/: Dockerfile  docker-entrypoint.sh  shared.yml  with-nix.sh
modules/: back-compat.nix  command.nix  commands.nix  common.nix  default.nix  devshell.nix  docker.nix  env.nix  environment-variables.nix  files.nix  flake-module.nix  hooks.nix  modules-docs.nix  modules.nix  nixpkgs.nix  options-document.nix  packages.nix  process-compose.nix  processes.nix  shell.nix  snow.nix  snowblower-environment.nix  snowblower.nix  systems.nix  templates.nix  test.nix
scripts/: generate_docs.py
secrets/: .env.local.age  foo.age
(+274 files in other folders)
