[project]
name = "snowblower_cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "tomli-w>=1.2.0",
]

[tool.ruff]
select = ['ALL']
ignore = ['ANN401', 'D', 'INP001']

[tool.ruff.lint]
extend-select = [
    "F",   # Pyflakes rules
    "W",   # PyCodeStyle warnings
    "E",   # PyCodeStyle errors
    "I",   # Sort imports properly
    "UP",  # Warn if certain things can changed due to newer Python versions
    "C4",  # Catch incorrect use of comprehensions, dict, list, etc
    "FA",  # Enforce from __future__ import annotations
    "ISC", # Good use of string concatenation
    "ICN", # Use common import conventions
    "RET", # Good return practices
    "SIM", # Common simplification rules
    "TID", # Some good import practices
    "TC",  # Enforce importing certain types in a TYPE_CHECKING block
    "PTH", # Use pathlib instead of os.path
    "TD",  # Be diligent with TODO comments
    "NPY", # Some numpy-specific things

    "A",   # detect shadowed builtins
    "BLE", # disallow catch-all exceptions
    "S",   # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it

    "COM", # enforce trailing comma rules
    "DTZ", # require strict timezone manipulation with datetime
    "FBT", # detect boolean traps
    "N",   # enforce naming conventions, e.g. ClassName vs function_name
]


[project.scripts]
snowblower = "snowblower_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
